# GalacticGateway

./: Dockerfile  README.md  docker-compose.yml
.github/workflows/: codeql.yml
AlienLanguageTranslator/: AlienLanguageTranslator.py  LanguageModels.py
ai/models/: galactic_ai_model.js
communication/: quantum_communication.py
components/: GalacticGatewayDashboard.js  GalacticGatewayWallet.js
config/: config.json
contracts/: GalacticAI.sol  GalacticBridge.sol  GalacticGateway.sol  GalacticNode.sol  GalacticOracle.sol  GalacticRouter.sol  GalacticToken.sol
core/: DataEncryption.py  GalacticGateway.py  GalacticNetwork.py  GatewayController.py  config.py  database.py  entanglement_auth.py  network.py  security.py  utils.py
core/ai/: DecisionMaker.py  MachineLearningModel.py  NaturalLanguageProcessor.py  computer_vision.js  galactic_event_detector.py  galactic_neural_network.py  galactic_nlp.py  galactic_pattern_recognition.py  knowledge_graph.rb  neural_network.py  quantum_optimization.java  quantum_optimization.py  rl_agent.cpp
core/ai/advanced_computer_vision/: galactic_object_detector.py
core/ai/advanced_nlp_alien_communication/: alien_communication.rb
core/ai/nlp/: NLPModule.java
core/ai/realtime_anomaly_detection/: anomaly_detection.c
core/chatbot/: agi_chatbot.java  pom.xml
core/object_detection/: CMakeLists.txt  yolov4_object_detection.cpp
galactic_map/: galactic_map.js
kubernetes/: deployment.yaml  ingress.yaml  service.yaml
life_support/: life_support_system.py
modules/: WormholeStabilizer.py
navigation/: agi_navigation.py
network/: mainnet.json  testnet.json
src/: GalacticAI.js  GalacticBridge.js  GalacticNode.js  GalacticOracle.js  GalacticRouter.js  index.js
utils/: ErrorHandling.py  Logger.py  constants.js  crypto.js  galactic-gateway-api.js  galactic-gateway-block.js  galactic-gateway-blockchain.js  galactic-gateway-transaction.js  galactic-gateway-wallet.js  helpers.js  storage.js
